# sse-json-parser

./: .gitignore  README.md  demo.py  langgraph_agent.py  pyproject.toml  test_adapters.py  test_parser.py
.github/workflows/: python-test.yml
src/sse_json_parser/: __init__.py  adapters.py  parser.py
