[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sse-json-parser"
version = "0.1.3"
description = "A lightweight SSE stream parser for extracting JSON payloads."
readme = "README.md"
authors = [
  { name = "Antigravity", email = "antigravity@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/example/sse-json-parser"
